--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -138,7 +138,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/ImMafond/immafond" target="_blank" rel="next">Luis Gustavo</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="next">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/LuisGuFM" target="_blank" rel="next">Luis Gustavo</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="next">CursoemVideo</a></p>
     </footer>
     
 </body>
