--- a/exercicios/ex020/pseudoclasse.html
+++ b/exercicios/ex020/pseudoclasse.html
@@ -23,6 +23,7 @@
     <div id="d1">01</div>
     <div id="d2">02</div>
     <div id="d3">03</div>
+    <p><a href=""></a></p>
     
 </body>
 </html>
