Avancei mais ainda no site do geba

--- a/desafios/sitedogeba/index.html
+++ b/desafios/sitedogeba/index.html
@@ -28,7 +28,7 @@
             </h1>
 
             <p>
-                Nascido em <strong>Maringá</strong>, <strong>Paraná</strong>, <strong>Geba</strong> teve uma infância normal de qualquer retardado. Chegando na adolescência, se deparou com os games, começando pelo <abbr title="Playstation 3">Play 3</abbr>, jogando diversos jogos, entre eles <abbr title="Grand Theft Auto 5">GTA V</abbr>.
+                Nascido em <strong>Maringá, Paraná</strong>, <strong class="Geba">Geba</strong> teve uma infância normal de qualquer retardado. Chegando na adolescência, se deparou com os games, começando pelo <abbr title="Playstation 3"><strong>Play 3</strong></abbr>, jogando diversos jogos, entre eles <abbr title="Grand Theft Auto 5"><strong>GTA V</strong></abbr>.
             </p>
 
             <img src="imagens/gebageba.png" alt="foto do geba">
