--- a/desafios/sitedogeba/index.html
+++ b/desafios/sitedogeba/index.html
@@ -31,7 +31,7 @@
                 Nascido em <strong>Maringá, Paraná</strong>, <strong class="Geba">Geba</strong> teve uma infância normal de qualquer retardado. Chegando na adolescência, se deparou com os games, começando pelo <abbr title="Playstation 3"><strong>Play 3</strong></abbr>, jogando diversos jogos, entre eles <abbr title="Grand Theft Auto 5"><strong>GTA V</strong></abbr>.
             </p>
 
-            <img src="imagens/gebageba.png" alt="foto do geba">
+            <img src="imagens/gebageba400px.png" alt="foto do geba">
         
 
             <p>
@@ -46,7 +46,7 @@
                 Em questão de físico, <strong>Gaybriel</strong> começou magro e depois virou uma bola, porém ele está trabalhando firmemente para mudar sua situação. Foco Geba!
             </p>
 
-            <img src="imagens/gebapreto.webp" alt="Ronie Colleman"> 
+            <img src="imagens/gebapreto400px.png" alt="Geba Colleman"> 
 
             <p>
                 Como podemos ver, esse é o <strong>Geba</strong> na cabeça dele, mas na realidade ele está mais parecido com isso.
