--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,13 @@
         width: 500px;
         border-collapse: collapse;
     }
+
+    caption {
+        font-size: 1.5em;
+        font-weight: bold;
+        padding: 10px;
+        background-color: lightgray;
+    }
     
     td, th {
         border: 1px solid black;
@@ -22,6 +29,14 @@
     thead, tfoot {
         background-color: gray;
         color: white;
+    }
+
+    tbody > tr:nth-child(even) {
+        background-color: lightgray;
+    }
+
+    tbody > tr:nth-child(odd) {
+        background-color: white;
     }
 
     td.nun {
@@ -44,9 +59,10 @@
     -->
 
     <table>
+        <caption>Populacao das Unidades Federativas</caption>
         <thead>
-            <th>Estado</th>
-            <th>Populacao</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px;">Populacao</th>
         </thead>
 
         <tbody>
@@ -163,7 +179,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="nun"><strong>203.079.389</strong></td>
             </tr>
         </tfoot>
