--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
     table {
         width: 500px;
         border-collapse: collapse;
+        position: relative;
     }
 
     caption {
@@ -29,6 +30,12 @@
     thead, tfoot {
         background-color: gray;
         color: white;
+    }
+
+    thead > tr > th {
+        position: sticky;
+        top: -1px;
+        background-color: gray;
     }
 
     tbody > tr:nth-child(even) {
@@ -184,6 +191,13 @@
             </tr>
         </tfoot>
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, deserunt, vitae eum quibusdam voluptas itaque ad totam error in commodi aperiam odio sunt amet obcaecati, exercitationem nostrum? Porro, dolorem quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos vero dolorum quia unde, explicabo id, molestias nam saepe cum nostrum alias nihil ut quaerat modi, aliquid obcaecati labore dolores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sapiente, voluptatibus dolore recusandae fuga incidunt deleniti nemo eligendi voluptate ratione et dolores quo quaerat amet atque alias eius neque facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, non culpa incidunt recusandae error suscipit blanditiis animi. Aspernatur illum tempore similique expedita quia? Sit, numquam. Libero, nam! Sunt, perspiciatis eos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, deserunt, vitae eum quibusdam voluptas itaque ad totam error in commodi aperiam odio sunt amet obcaecati, exercitationem nostrum? Porro, dolorem quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos vero dolorum quia unde, explicabo id, molestias nam saepe cum nostrum alias nihil ut quaerat modi, aliquid obcaecati labore dolores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sapiente, voluptatibus dolore recusandae fuga incidunt deleniti nemo eligendi voluptate ratione et dolores quo quaerat amet atque alias eius neque facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, non culpa incidunt recusandae error suscipit blanditiis animi. Aspernatur illum tempore similique expedita quia? Sit, numquam. Libero, nam! Sunt, perspiciatis eos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, deserunt, vitae eum quibusdam voluptas itaque ad totam error in commodi aperiam odio sunt amet obcaecati, exercitationem nostrum? Porro, dolorem quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos vero dolorum quia unde, explicabo id, molestias nam saepe cum nostrum alias nihil ut quaerat modi, aliquid obcaecati labore dolores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sapiente, voluptatibus dolore recusandae fuga incidunt deleniti nemo eligendi voluptate ratione et dolores quo quaerat amet atque alias eius neque facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, non culpa incidunt recusandae error suscipit blanditiis animi. Aspernatur illum tempore similique expedita quia? Sit, numquam. Libero, nam! Sunt, perspiciatis eos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, deserunt, vitae eum quibusdam voluptas itaque ad totam error in commodi aperiam odio sunt amet obcaecati, exercitationem nostrum? Porro, dolorem quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos vero dolorum quia unde, explicabo id, molestias nam saepe cum nostrum alias nihil ut quaerat modi, aliquid obcaecati labore dolores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sapiente, voluptatibus dolore recusandae fuga incidunt deleniti nemo eligendi voluptate ratione et dolores quo quaerat amet atque alias eius neque facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, non culpa incidunt recusandae error suscipit blanditiis animi. Aspernatur illum tempore similique expedita quia? Sit, numquam. Libero, nam! Sunt, perspiciatis eos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, deserunt, vitae eum quibusdam voluptas itaque ad totam error in commodi aperiam odio sunt amet obcaecati, exercitationem nostrum? Porro, dolorem quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos vero dolorum quia unde, explicabo id, molestias nam saepe cum nostrum alias nihil ut quaerat modi, aliquid obcaecati labore dolores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sapiente, voluptatibus dolore recusandae fuga incidunt deleniti nemo eligendi voluptate ratione et dolores quo quaerat amet atque alias eius neque facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, non culpa incidunt recusandae error suscipit blanditiis animi. Aspernatur illum tempore similique expedita quia? Sit, numquam. Libero, nam! Sunt, perspiciatis eos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, deserunt, vitae eum quibusdam voluptas itaque ad totam error in commodi aperiam odio sunt amet obcaecati, exercitationem nostrum? Porro, dolorem quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos vero dolorum quia unde, explicabo id, molestias nam saepe cum nostrum alias nihil ut quaerat modi, aliquid obcaecati labore dolores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sapiente, voluptatibus dolore recusandae fuga incidunt deleniti nemo eligendi voluptate ratione et dolores quo quaerat amet atque alias eius neque facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, non culpa incidunt recusandae error suscipit blanditiis animi. Aspernatur illum tempore similique expedita quia? Sit, numquam. Libero, nam! Sunt, perspiciatis eos.</p>
     
 </body>
 </html>
