aprendendo sobre seguranca de iframes

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, doloremque quas provident veniam nobis repellat voluptas numquam explicabo dolores commodi molestias ducimus temporibus possimus, aliquid sunt eligendi quis? Sit, eos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iste totam, repellat nam nesciunt eum magnam! Aliquam, quaerat eum quisquam et sapiente ea mollitia in ex, aperiam commodi, porro ad!</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opcoes acima</h1><img src='imagens/gebasol.png'>" >
         <p>Infelizmente seu navegador nao e compativel</p>
     </iframe>
 
