--- a/exercicios/ex024/iframe004.html
+++ b/exercicios/ex024/iframe004.html
@@ -9,7 +9,7 @@
     <h1>Meu site principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae architecto adipisci voluptas laboriosam cumque fugit rem, enim quibusdam non nisi praesentium nemo. Cupiditate distinctio esse magni maxime ducimus voluptatum totam?</p>
 
-    <iframe src="paginas-extras/pagina004.html" sandbox="sandbox">
+    <iframe src="paginas-extras/pagina004.html" sandbox="allow-same-origin allow-forms allow-scripts" referrerpolicy="no-referer">
         Seu navegador nao e compativel com isso...
     </iframe>
 
